--- a/src/components/feedbackList/feedbackListHeader/feedbackListHeader.scss
+++ b/src/components/feedbackList/feedbackListHeader/feedbackListHeader.scss
@@ -1,6 +1,6 @@
 .feedback-list-header {
   height: 60px;
-  background-color: #282c34;
+  background-color: #373b44;
   color: #ffffff;
   display: flex;
   flex-direction: row;
