--- a/src/components/feedbackList/feedbackListItemRating/feedbackListItemRating.scss
+++ b/src/components/feedbackList/feedbackListItemRating/feedbackListItemRating.scss
@@ -1,4 +1,5 @@
 $item-size: 40px;
+$item-size-mobile: 20px;
 
 .rating-list-item {
   width: $item-size;
@@ -11,5 +12,18 @@ $item-size: 40px;
   > span {
     vertical-align: middle;
     line-height: $item-size;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .rating-list-item {
+    width: $item-size-mobile;
+    height: $item-size-mobile;
+    border-radius: $item-size-mobile;
+    font-size: 12pt;
+
+    > span {
+      line-height: $item-size-mobile;
+    }
   }
 }
