--- a/src/components/feedbackList/feedbackListItem/feedbackListItem.scss
+++ b/src/components/feedbackList/feedbackListItem/feedbackListItem.scss
@@ -1,4 +1,5 @@
 $cell-padding: 10px;
+$cell-padding-mobile: 5px;
 
 .feedback-list-row {
   display: flex;
@@ -6,6 +7,7 @@ $cell-padding: 10px;
   height: 70px;
   border-bottom: 1px solid #dedede;
   align-items: center;
+  font-size: 16px;
 
   &__column {
     text-align: center;
@@ -38,5 +40,35 @@ $cell-padding: 10px;
   &__column-platform {
     min-width: 100px;
     max-width: 100px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .feedback-list-row {
+    height: 50px;
+    font-size: 12px;
+
+    &__column {
+      padding: $cell-padding-mobile;
+    }
+
+    &__column-comment {
+      max-height: calc(100% - 2 * #{$cell-padding-mobile});
+    }
+
+    &__column-browser {
+      min-width: 50px;
+      max-width: 80px;
+    }
+
+    &__column-device-type {
+      min-width: 60px;
+      max-width: 80px;
+    }
+
+    &__column-platform {
+      min-width: 60px;
+      max-width: 80px;
+    }
   }
 }
