change list max height

--- a/src/components/feedbackList/feedbackList.scss
+++ b/src/components/feedbackList/feedbackList.scss
@@ -3,6 +3,11 @@
   overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.12) 0 0 2px 0, rgba(0, 0, 0, 0.24) 0 2px 2px 0;
   background-color: #ffffff;
+  height: 80vh;
+
+  &__list-container {
+    height: calc(100% - 60px);
+  }
 
   &__list {
     list-style-type: none;
@@ -11,5 +16,7 @@
     margin-inline-start: 0;
     margin-inline-end: 0;
     padding-inline-start: 0;
+    height: 100%;
+    overflow: auto;
   }
 }
